@@ -20,9 +20,10 @@ command = export
 
 [Region  / postlude]
 
-[SourceGitHub]
-
 [Bugs]
+header = SUPPORT
+
+[SourceGitHub]
 
 [Authors]
 
